--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "dev": "webpack --watch"
   },
   "dependencies": {
+    "@types/uuid": "^8.3.1",
     "ts-loader": "^9.2.3",
     "typescript": "^4.3.5",
+    "uuid": "^8.3.2",
     "webpack": "^5.42.0",
     "webpack-cli": "^4.7.2"
   }
